repaired minor css layout issue.

--- a/static/css/ooinet-03.css
+++ b/static/css/ooinet-03.css
@@ -54,7 +54,7 @@ body {
 #mmain {
   position:absolute;
   top:116px;
-  left:218px;
+  left:220px;
   padding:0px;
   margin:0px;
   /* height:calc(100% - 116px); */
